--- a/academy-website/package.json
+++ b/academy-website/package.json
@@ -2,21 +2,21 @@
   "name": "academy-website",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Shawn-kcs.github.io/Narnia_Lab",
   "dependencies": {
-    "@supabase/supabase-js": "^2.53.0",
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.6.4",
-    "@testing-library/react": "^16.3.0",
+    "@supabase/supabase-js": "^2.44.4",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.3.7",
-    "framer-motion": "^12.23.12",
-    "react": "^19.1.1",
-    "react-bootstrap": "^2.10.10",
-    "react-dom": "^19.1.1",
-    "react-icons": "^5.5.0",
+    "bootstrap": "^5.3.3",
+    "framer-motion": "^11.3.8",
+    "react": "^18.3.1",
+    "react-bootstrap": "^2.10.4",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.12.2",
-    "styled-components": "^6.1.19",
+    "styled-components": "^6.1.12",
     "tsparticles-slim": "^2.12.0",
     "web-vitals": "^2.1.4"
   },
@@ -24,7 +24,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -43,5 +45,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
